Edited vim ctags

--- a/_posts/2018-01-26-vim-ctags.md
+++ b/_posts/2018-01-26-vim-ctags.md
@@ -174,13 +174,13 @@ Puede pasar que en ocasiones el patrón de búsqueda devuelva múltiples resulta
 
 En caso de trabajar en proyectos Javascript como yo, comprobarás una carencia importante en la interpretación de objetos de lenguaje. Y más aun tratándose de la nuevas versiones de ECMAScript por no decir React. Para solventar esta insuficiencia podemos crear nuevas definiciones mediante expresiones regulares. Esta tarea suele ser un coñazo. Así que hice una pequeña búsqueda en google y hallé un [proyecto][ctags-git] en github que incluye las expresiones regulares necesarias para la nueva sintaxis de Javascript. Así que ni corto ni perezoso la descargué. Mil gracias a [Romain Lafourcade][romain-git] por compartirlo desinteresadamente.
 
-Pero todavía no funciona bien con React. Así que en otra búsqueda di con otros dos artículos ([este][post1] y [este][post2]) que ampliaban los patrones de ctags. El resultado de mí ctags es el siguiente.
+Pero todavía no funciona bien con React. Así que en otra búsqueda di con otros dos artículos ([este][post1] y [este][post2]) que ampliaban los patrones de ctags. El resultado final de mi archivo de configuración es el siguiente.
 
 {% gist 7aec99ee11c7f1951e43918c0a94e20b %}
 
-No se descartan cambios en el futuro.
+De todas formas no se descartan cambios en el futuro.
 
-Y esto es todo. A parte de estos consejos también recomiendo la lectura del [capítulo 29][29] y [Tags and special searches][tags-special] del manual de vim para ampliar información al respecto.
+A parte de estos consejos también recomiendo la lectura del [capítulo 29][29] y [Tags and special searches][tags-special] del manual de vim para ampliar información al respecto.
 
 ## Fuentes
 * [vimdoc.sourceforge.net/htmldoc/usr_29.html](http://vimdoc.sourceforge.net/htmldoc/usr_29.html)
