Intro texts updated

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -1,8 +1,8 @@
 ---
 title: "vim: introducción"
 date: 2017-11-03 00:30:00 +0100
-excerpt: Breve tutorial sobre el manejo de vim y sus diferentes modos de edición.
 permalink: /articulos/vim-intro
+excerpt: Si todavía no conoces vim o si lo conoces pero te parece marciano su funcionamiento, echa un vistazo a este breve tutorial sobre como emplearlo y sus diferentes modos de edición.
 category: it
 tags: [vim, intro, modos-vim, tutorial]
 ---
