--- a/_posts/2018-01-26-vim-ctags.md
+++ b/_posts/2018-01-26-vim-ctags.md
@@ -1,7 +1,7 @@
 ---
 title: "vim: ctags"
 date: 2018-01-26 11:50:00 +0100
-excerpt: Como configurar ctags para enlazar referencias entre objetos del lenguaje en vim.
+excerpt: Guía prática para configurar ctags. Este programa permite para enlazar referencias entre objetos del lenguaje entre diferentes archivos en vim.
 permalink: /articulos/vim-ctags
 category: it
 tags: [vim, ctags, tutorial]
